[package]
name = "frostflake"
version = "0.3.0"
edition = "2021"
authors = ["Daisuke Murase <typester@cpan.org>"]

description = "Customizable and thread-safe distributed id generator"
repository = "https://github.com/typester/frostflake-rs"
keywords = ["distributed", "id", "generator", "snowflake"]
categories = ["encoding"]
license = "MIT"

[dependencies]
crossbeam = "~0.8"
