[package]
name = "frostflake"
version = "0.3.0"
edition = "2021"
authors = ["Daisuke Murase <typester@cpan.org>"]

description = "Customizable and thread-safe distributed id generator"
repository = "https://github.com/typester/frostflake-rs"
keywords = ["distributed", "id", "generator", "snowflake"]
categories = ["encoding"]
license = "MIT"

[features]
default = []
all = ["tokio", "std-thread"]
tokio = ["dep:tokio", "dep:anyhow"]
std-thread = ["dep:crossbeam"]

[dependencies]
anyhow = { version = "~1.0.57", optional = true }
crossbeam = { version = "~0.8", optional = true }
tokio = { version = "~1.18.1", features = ["rt","sync"], optional = true }

[dev-dependencies]
tokio = { version = "~1.18.1", features = ["full"] }
